add_executable(test_memory test_memory.cpp)

# Include directories
target_include_directories(test_memory PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp
)

# Set C++ standard
target_compile_features(test_memory PRIVATE cxx_std_20)

add_test(NAME MemoryTest COMMAND test_memory)

# test_config
add_executable(test_config test_config.cpp)

target_include_directories(test_config PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp
)

target_compile_features(test_config PRIVATE cxx_std_20)

target_link_libraries(test_config PRIVATE
    fmt::fmt
    tomlplusplus::tomlplusplus
    SDL2::SDL2-static
)

add_test(NAME ConfigTest COMMAND test_config)

# test_directory_file_system
add_executable(test_directory_file_system test_directory_file_system.cpp)

target_include_directories(test_directory_file_system PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp
)

target_compile_features(test_directory_file_system PRIVATE cxx_std_20)

add_test(NAME DirectoryFileSystemTest COMMAND test_directory_file_system)

# test_mutex
add_executable(test_mutex test_mutex.cpp)

target_include_directories(test_mutex PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp
)

target_compile_features(test_mutex PRIVATE cxx_std_20)

# On Linux, we need to link against pthreads implicitly, usually covered by compiler or standard lib
# But if threads are used, sometimes we need to link against Threads::Threads.
find_package(Threads REQUIRED)
target_link_libraries(test_mutex PRIVATE Threads::Threads)

add_test(NAME MutexTest COMMAND test_mutex)

# test_text_wrap
add_executable(test_text_wrap test_text_wrap.cpp)

target_sources(test_text_wrap PRIVATE
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp/ui/text_wrap_utils.cpp
    ${CMAKE_SOURCE_DIR}/thirdparty/imgui/imgui.cpp
    ${CMAKE_SOURCE_DIR}/thirdparty/imgui/imgui_draw.cpp
    ${CMAKE_SOURCE_DIR}/thirdparty/imgui/imgui_tables.cpp
    ${CMAKE_SOURCE_DIR}/thirdparty/imgui/imgui_widgets.cpp
    ${CMAKE_SOURCE_DIR}/thirdparty/imgui/imgui_demo.cpp
)

target_include_directories(test_text_wrap PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp
    ${CMAKE_SOURCE_DIR}/thirdparty/imgui
)

target_compile_features(test_text_wrap PRIVATE cxx_std_20)

# ImGui might need SDL if configured so? ImGui configuration is in imconfig.h which is in imgui folder.
# Let's assume default config.

add_test(NAME TextWrapTest COMMAND test_text_wrap)

# benchmark_iso_parsing
add_executable(benchmark_iso_parsing benchmark_iso_parsing.cpp
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp/install/iso_file_system.cpp
    ${CMAKE_SOURCE_DIR}/tools/XenonRecomp/XenonUtils/memory_mapped_file.cpp
)

target_include_directories(benchmark_iso_parsing PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/UnleashedRecomp
    ${CMAKE_SOURCE_DIR}/tools/XenonRecomp/XenonUtils
    ${CMAKE_SOURCE_DIR}/thirdparty/unordered_dense/include
)

target_compile_features(benchmark_iso_parsing PRIVATE cxx_std_20)
